--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
 
   get: ^5.0.0-release-candidate-4
+  flutter_easyloading: ^3.0.5
+  flutter_native_splash: ^2.3.0
 
 dev_dependencies:
   flutter_test:
