--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,14 +30,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutx:
-    path: ../flutx
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  dio: ^5.1.2
   get: ^5.0.0-release-candidate-4
+  get_storage: ^2.1.1
   flutter_easyloading: ^3.0.5
   flutter_native_splash: ^2.3.0
 
